# saladin

./: .env.local  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  TERRAIN.md  index.html  package.json  shot.sh
.github/workflows/: release.yml
crates/client/: Cargo.toml  Trunk.toml
crates/sim/: Cargo.toml
docs/: ROADMAP.md  STDB_PERF.md  measure_perf.sh  perf_measure.mjs  perf_shot.mjs  perf_sweep.sh
saladin-bevy/: .gitignore  Cargo.toml
saladin-bevy/crates/client/: Cargo.toml  index.html
saladin-bevy/crates/client/src/: camera.rs  config.rs  dev.rs  environment.rs  fx.rs  input.rs  main.rs  minimap.rs  perf.rs  selection.rs  terrain.rs  vegetation.rs
saladin-bevy/crates/client/src/audio/: mod.rs  synth.rs  voice.rs
saladin-bevy/crates/client/src/render/: ghost.rs  sync.rs
saladin-bevy/crates/client/src/render/models/: buildings.rs  mod.rs  props.rs  units.rs
saladin-bevy/crates/client/src/ui/: actions.rs  hud.rs  menu.rs  mod.rs  pause.rs  preview.rs  theme.rs  widgets.rs
saladin-bevy/crates/protocol/: Cargo.toml
saladin-bevy/crates/protocol/examples/: net_bench.rs
saladin-bevy/crates/protocol/src/: components.rs  lib.rs  net.rs  net_msg.rs  net_tcp.rs  net_ws.rs  relay_core.rs  save.rs
saladin-bevy/crates/protocol/src/commands/: build_cmds.rs  economy_cmds.rs  match_ctl.rs  mod.rs  spawn.rs  unit_cmds.rs
saladin-bevy/crates/protocol/src/systems/: ai_brain.rs  combat.rs  economy.rs  gather.rs  research.rs
saladin-bevy/crates/protocol/tests/: ai.rs  commands.rs  determinism.rs  gather.rs  lobby.rs  lockstep.rs  placement.rs  rooms.rs  save.rs  starvation.rs  stats.rs
saladin-bevy/crates/server/: Cargo.toml  README.md
saladin-bevy/crates/server/src/: main.rs
saladin-bevy/crates/sim/src/: ai.rs  biomes.rs  buildings.rs  buildings_defs.rs  constants.rs  content.rs  economy.rs  elevation.rs  enums.rs  garrison.rs  lib.rs  match_state.rs  morale.rs  presets.rs  research.rs  rng.rs  spatial.rs  tech.rs  terrain.rs
saladin-bevy/crates/sim/tests/: worldgen.rs
saladin-bevy/scripts/: bake_voices.py
scripts/: bake_voices.py
scripts/bake_models/: bake.py  bake_buildings.py  bake_units.py  buildings.py  common.py  preview_units.py  props.py  units.py
shared/: ai.test.ts  ai.ts  biomes.ts  buildings.ts  buildings_defs.ts  combat.ts  constants.ts  defs.ts  economy.ts  elevation.ts  enums.ts  garrison.test.ts  garrison.ts  index.ts  match.test.ts  match.ts  morale.test.ts  morale.ts  noise.ts  pathfinding.test.ts  pathfinding.ts  presets.ts  research.test.ts  research.ts  rng.ts  save.test.ts  save.ts  sim.ts  spatial.test.ts  spatial.ts  tech.test.ts  tech.ts  terrain.ts  units.ts
spacetimedb/: measure_ticks.sh  package-lock.json  package.json  run_curve.sh  tsconfig.json
spacetimedb/src/: index.ts  lifecycle.ts
src/: App.css  App.integration.test.tsx  App.tsx  buildings.test.ts  combat.test.ts  config.ts  economy.test.ts  index.css  main.tsx  path.test.ts  sim.test.ts  slots.test.ts  terrain.test.ts  worldgen.test.ts
src/game/: Environment.ts  SaladinGame.ts  Terrain.ts  Vegetation.ts  camera.ts  input.ts  minimap.ts
src/menu/: FactionPicker.tsx  GameOver.tsx  JoinScreen.tsx  Lobby.tsx  MainMenu.tsx  Menu.module.css  Menu.tsx  OpponentList.tsx  SaveLoadScreen.tsx  SkirmishSetup.tsx
src/module_bindings/: add_ai_reducer.ts  ai_table.ts  attack_unit_reducer.ts  building_table.ts  config_table.ts  create_match_reducer.ts  debug_big_match_reducer.ts  debug_stress_reducer.ts  delete_save_reducer.ts  demolish_building_reducer.ts  enter_game_reducer.ts  entity_table.ts  garrison_table.ts  garrison_unit_reducer.ts  index.ts  match_table.ts  (+17 more)
(+135 files in other folders)
