[workspace]
resolver = "2"
members = ["crates/sim", "crates/protocol", "crates/server", "crates/client"]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
saladin-sim = { path = "crates/sim" }
saladin-protocol = { path = "crates/protocol" }
fixed = { version = "1.29", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
bincode = "1.3"
ewebsock = "0.8"
tungstenite = "0.29"
# Headless ECS/app subcrates — no render. The client adds the full `bevy` umbrella.
bevy_app = "0.19.0-rc.2"
bevy_ecs = "0.19.0-rc.2"
bevy_time = "0.19.0-rc.2"
bevy_platform = "0.19.0-rc.2"

[profile.dev]
opt-level = 1

# Deps optimized in dev builds (Bevy is unusable un-optimized). The old
# opt-level=0 diagnostic for the glyph corruption is obsolete — the corruption
# was a bevy 0.18.1 text bug, fixed by 0.19.0-rc.2.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
