[package]
name = "saladin-client"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "saladin-client"
path = "src/main.rs"

[dependencies]
saladin-protocol.workspace = true
saladin-sim.workspace = true
# Full Bevy umbrella with render (mirrors bevy_game_template's feature set, minus
# the audio crates we don't use yet). The protocol/sim crates depend on the same
# 0.18 bevy_* subcrates, which cargo unifies with this umbrella.
bevy = { version = "0.19.0-rc.2", features = ["x11", "wayland"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
local-ip-address = "0.6"

[features]
dev = ["bevy/dynamic_linking"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
