[package]
name = "saladin-protocol"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
saladin-sim.workspace = true
serde.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_time.workspace = true
bevy_platform.workspace = true
bincode.workspace = true
ewebsock.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tungstenite.workspace = true
