[package]
name = "saladin-server"
edition.workspace = true
version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "saladin-server"
path = "src/main.rs"

[dependencies]
saladin-protocol.workspace = true
saladin-sim.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
